@@ -113,4 +113,5 @@ Changes:
 	- Support Sodium and OpenSsl encryption.
 90. Added LanguageCodes Trait.
 91. Added Whoops custum library for show more friendly error log on display if turn on.
+92. Added Class aliases support.
 	
